# google-workspace-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: gws-commands.md
docs/brainstorms/: 2026-05-18-google-mcp-server-requirements.md
docs/plans/: 2026-05-18-001-feat-google-workspace-mcp-server-plan.md
src/google_mcp/: __init__.py  runner.py  server.py
src/google_mcp/calendar/: __init__.py  schemas.py  tools.py
src/google_mcp/drive/: __init__.py  schemas.py  tools.py
src/google_mcp/gmail/: __init__.py  schemas.py  tools.py
tests/: test_calendar_tools.py  test_drive_tools.py  test_gmail_tools.py  test_runner.py  test_server.py
