[project]
name = "google-mcp"
version = "0.1.0"
description = "Google Workspace MCP server wrapping the gws CLI"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]

[project.scripts]
google-mcp = "google_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
